Prep for external use
- Moved sources to src directory
- Added BLBLSTD_IMPL define guard
- Added blblstd.cpp central build root
- Changed binary type to module object
- Added full dependency list to build makefile
- Added g++ path to env list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,13 @@
 		"atomic": "cpp",
 		"algorithm": "cpp",
 		"memory_resource": "cpp",
-		"semaphore": "cpp"
+		"semaphore": "cpp",
+		"deque": "cpp",
+		"list": "cpp",
+		"string": "cpp",
+		"unordered_map": "cpp",
+		"unordered_set": "cpp",
+		"vector": "cpp"
 	},
 	"godot_tools.scene_file_config": "d:\\Projects\\astostd\\String.cpp"
 }
